# P7

./: CMakeLists.txt  README.md  baseSettings.ini  installScript  installScriptSUSE  runP7.py  settings.ini  settingsFast.ini  settingsLab.ini
.github/workflows/: main.yml
Lab/: DataAnalysis.ijs  Reports.py
LabSettings/: depot_walker_sameoutput.ini  report_experiment_1.ini  report_experiment_2.ini  report_experiment_3.ini  report_experiment_4.ini
Test/: CMakeLists.txt
Test/Learner/: CMakeLists.txt  Learner.cpp
Test/Learner/miconic/: domain.pddl
Test/MacroGeneration/: CMakeLists.txt  MacroGeneration.cpp
src/: CMakeLists.txt
src/CommonInterface/: CMakeLists.txt  CommonInterface.cpp  CommonInterface.hh
src/EntanglementFinder/: EntanglementEvaluator.cpp  EntanglementEvaluator.hh
src/IntermediatePDDL/: PDDLAction.cpp  PDDLAction.hh  PDDLDomain.hh  PDDLLiteral.hh
src/Learner/: CMakeLists.txt  Learner.cpp  Learner.hh  learner.hh
src/MacroGeneration/: CMakeLists.txt  MacroGeneration.cpp  MacroGeneration.h  MacroGeneration.hh
src/MacroGrounder/: CMakeLists.txt  MacroGrounder.cpp  MacroGrounder.hh
src/PlanGenerator/: CMakeLists.txt  PlanGenerator.cpp  PlanGenerator.hh
src/Reformulators/: BaseReformulator.hh  SameOutputReformulator.cpp  SameOutputReformulator.hh
src/Reformulators/Walkers/: BaseWalkerReformulator.cpp  BaseWalkerReformulator.hh
src/Walker/Heuristics/: GoalCountHeuristic.hh
